Fixed gif not showing up

--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,11 @@ div {
 }
 
 #g1 {
-	left: 461px;
-	top: 1477px;
+	left: 465px;
+	top: 1482px;
+	width: 69px;
+	height: 68px;
+	z-index: 1;
 	position: absolute;
 }
 
